<?xml version="1.0"?>
<package format="2">
  <name>plc_message_parser</name>
  <version>0.0.1</version>
  <description>The PLC Message Parser for ROS</description>
  <maintainer email="raffiq1994@live.com">Your Name</maintainer>
  <license>AID</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>roscpp_serialization</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>serial</exec_depend>
  <exec_depend>roscpp_serialization</exec_depend>
</package>

